<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">




    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/placeholder05"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_addition_btn"
        android:id="@+id/startAddition"
        android:background="#2196f3"
        android:textColor="#ffffffff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="85dp"
        android:layout_above="@+id/startSubtraction"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_subtraction_btn"
        android:id="@+id/startSubtraction"
        android:background="#2196f3"
        android:textColor="#ffffffff"
        android:layout_above="@+id/startMultiplication"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_question_btn"
        android:id="@+id/startDivision"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#2196f3"
        android:textColor="#fff"
        android:layout_marginTop="3dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_multiplication_btn"
        android:id="@+id/startMultiplication"
        android:layout_above="@+id/startDivision"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#2196f3"
        android:textColor="#fff"
        android:layout_marginTop="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/training_center_label"
        android:id="@+id/TrainingCenterTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:textColor="#fff"
        android:textSize="36sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trainingCenterTextView"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/trainingCenterTextView"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test yourself"
        android:id="@+id/testButton"
        android:layout_below="@+id/TrainingCenterTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"/>
</RelativeLayout>