<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="jpinkidu.adventuretimemath.SubtractionMagic">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/placeholder05"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:weightSum="100">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_label"

                android:id="@+id/answerLabel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_weight="10"
                android:layout_marginRight="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_count_label"

                android:id="@+id/questionNumLabel"
                android:layout_weight="90"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/firstNumLabel"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="28sp"
                tools:text="100"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operator_minus"
                android:id="@+id/operationLabel"
                android:layout_weight="3"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:id="@+id/secNumLabel"
                tools:text="100"
                android:layout_weight="3"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal_label"
                android:visibility="invisible"
                android:id="@+id/equalLabel"
                android:layout_weight="3"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task_btn"
        android:id="@+id/checkBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#2196f3"
        android:layout_marginTop="3dp"
        android:textColor="#ffffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:id="@+id/solutionLabel"
        android:textSize="28sp"
        tools:text="200"
        android:layout_above="@+id/checkBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:textColor="#2196f3"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_result_btn"
        android:id="@+id/answerButton"
        android:layout_above="@+id/checkBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#2196f3"
        android:textColor="#ffffffff"/>




</RelativeLayout>
